# daemon

./: .gitignore  Cargo.toml  Makefile.toml  README.md  SPEC.md  event.json
schemas/: claude.md  cursor.md  opencode.md
src/: api.rs  bedrock.rs  claude.rs  cli.rs  cursor.rs  daemon.rs  daemon_log.rs  dashboard.rs  debug_instrument.rs  git.rs  grouping.rs  llama.rs  llm.rs  main.rs  model.rs  opencode.rs  path.rs  session.rs  session_row.rs  status.rs  store.rs
