[package]
name = "gg"
version = "0.1.0"
edition = "2021"

[dependencies]
console = "0.15"
ignore = "0.4"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"
time = { version = "0.3", features = ["formatting"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.30"
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.126.0"
aws-types = "1.3.13"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27"
