[package]
name = "gg"
version = "0.1.0"
edition = "2021"

[features]
default = ["llama-embedded"]
llama-embedded = ["dep:llama-cpp-2", "dep:encoding_rs", "dep:hf-hub"]

[dependencies]
console = "0.15"
ignore = "0.4"
libc = "0.2"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
textwrap = "0.16"
time = { version = "0.3", features = ["formatting"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.30"
aws-config = { version = "1.8.14", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.126.0"
aws-types = "1.3.13"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
ratatui = { version = "0.30", features = ["crossterm_0_28"] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
regex = "1"
llama-cpp-2 = { version = "0.1.138", optional = true }
encoding_rs = { version = "0.8.35", optional = true }
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["ureq", "rustls-tls"] }
